 - gui: removed uiobject::get_apparent_width/height and added uiobject::get_apparent_dimensions()
 - gui: removed uiobject::set_newly_created/is_newly_created (no longer necessary)
 - gui: removed manager::is_loading_ui() (no longer necessary)
 - gui: removed manager::begin() and end()
 - gui: removed frame::is_mouse_enabled; use is_mouse_click_enabled and is_mouse_move_enabled
 - gui: removed frame::is_in_frame; use is_in_region
 - gui: edit_box::set_text_insets now takes a single bounds2f argument
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
 - gui: font_string::set_offset now takes a single vector2f argument
 - gui: font_string::set_shadow_offset now takes a single vector2f argument
 - gui: the GUI will now properly handle render window being resized
 - gui: all UI objects are now managed with explicit single ownership (unique_ptr)
 - gui: added frame_renderer class interface to clarify the frame class
 - gui: only frames can now be flagged as having a frame_renderer
 - gui: "frame_level" has been renamed to just "level"
 - gui: frame::get_children and frame::get_regions return views rather than containers
 - gui: added gui::down_cast for safer down casting
 - gui: removed clear_links() in favor of using destructors
 - gui: added mechanism to handle most cases where a widget is destroyed in a callback
 - gui: relative sizing is now only applicable to XML <Size>
 - gui: split anchor into anchor (logic) + anchor_data (data)
 - gui: uiobject::set_parent() and uiobject::set_name() are no longer public
 - gui: Lua key binding functions now expect Lua functions as handlers, not strings
 - gui: renamed OnEditFocusGained to OnFocusGained (now available for FocusFrame too)
 - gui: renamed OnEditFocusLost to OnFocusLost (now available for FocusFrame too)
 - gui: key and mouse events no longer contain string names of buttons and keys