@@ -116,7 +116,9 @@ Other changes:
  - gui: removed manager::is_loading_ui() (no longer necessary)
  - gui: removed manager::begin() and end()
  - gui: removed frame::is_mouse_enabled; use is_mouse_click_enabled and is_mouse_move_enabled
- - gui: removed frame::is_in_frame; use is_in_region
+ - gui: removed frame::is_in_frame; use is_in_region instead
+ - gui: removed frame::register_all_events and unregister_all_events
+ - gui: removed frame::enable_keyboard, use enable_key_capture instead
  - gui: edit_box::set_text_insets now takes a single bounds2f argument
  - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
  - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
